--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 <div id="gallery-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                     <div class="gallery-item productos" data-aos="zoom-in" data-aos-delay="100">
                         <div class="relative overflow-hidden rounded-xl shadow-lg group">
-                            <img src="https://images.pexels.com/photos/5632386/pexels-photo-5632386.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Miel en tarro de vidrio" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105">
+                            <img src="img/s1.jpg" alt="Miel en tarro de vidrio" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105">
                             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500">
                                 <i class="fas fa-search-plus text-white text-3xl"></i>
                             </div>
@@ -348,7 +348,7 @@
                     </div>
                     <div class="gallery-item proceso" data-aos="zoom-in" data-aos-delay="200">
                         <div class="relative overflow-hidden rounded-xl shadow-lg group">
-                            <img src="https://images.unsplash.com/photo-1574312781358-132039757692?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Colmenas en el campo" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105">
+                            <img src="img/s2.jpg" alt="Colmenas en el campo" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105">
                             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500">
                                 <i class="fas fa-search-plus text-white text-3xl"></i>
                             </div>
@@ -356,18 +356,18 @@
                     </div>
                     <div class="gallery-item uso" data-aos="zoom-in" data-aos-delay="300">
                         <div class="relative overflow-hidden rounded-xl shadow-lg group">
-                            <img src="https://images.pexels.com/photos/4033142/pexels-photo-4033142.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Miel en una tostada" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105">
+                            <img src="img/s3.jpg" alt="Miel en una tostada" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105">
                             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500">
                                 <i class="fas fa-search-plus text-white text-3xl"></i>
                             </div>
                         </div>
                     </div>
-                    <div class="gallery-item productos" data-aos="zoom-in" data-aos-delay="400"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="https://images.pexels.com/photos/3371302/pexels-photo-3371302.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Diferentes tipos de miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
-                    <div class="gallery-item proceso" data-aos="zoom-in" data-aos-delay="500"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="https://images.unsplash.com/photo-1582298642398-e76317b9b1d9?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Extracción de panal" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
-                    <div class="gallery-item uso" data-aos="zoom-in" data-aos-delay="600"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="https://images.pexels.com/photos/10186105/pexels-photo-10186105.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Yogurt con miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
-                    <div class="gallery-item productos" data-aos="zoom-in" data-aos-delay="700"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="https://images.pexels.com/photos/17698501/pexels-photo-17698501/free-photo-of-producto-alimentacion-miel-botella.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Miel envasada" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
-                    <div class="gallery-item proceso" data-aos="zoom-in" data-aos-delay="800"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="https://images.unsplash.com/photo-1547474136-e822453c1537?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Abejas en el panal" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
-                    <div class="gallery-item uso" data-aos="zoom-in" data-aos-delay="900"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="https://images.pexels.com/photos/14102213/pexels-photo-14102213.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Té con miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
+                    <div class="gallery-item productos" data-aos="zoom-in" data-aos-delay="400"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s4.jpg" alt="Diferentes tipos de miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
+                    <div class="gallery-item proceso" data-aos="zoom-in" data-aos-delay="500"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s5.jpg" alt="Extracción de panal" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
+                    <div class="gallery-item uso" data-aos="zoom-in" data-aos-delay="600"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s1.jpg" alt="Yogurt con miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
+                    <div class="gallery-item productos" data-aos="zoom-in" data-aos-delay="700"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s2.jpg" alt="Miel envasada" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
+                    <div class="gallery-item proceso" data-aos="zoom-in" data-aos-delay="800"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s3.jpg" alt="Abejas en el panal" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
+                    <div class="gallery-item uso" data-aos="zoom-in" data-aos-delay="900"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s4.jpg" alt="Té con miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
                     </div>
             </div>
         </section>
@@ -722,4 +722,5 @@
         });
     </script>
 </body>
+
 </html>
