--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </head>
 <body class="antialiased">
 
-    <a href="https://wa.me/XXXXXXXXXX" target="_blank" class="whatsapp-float fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition duration-300" aria-label="WhatsApp">
+    <a href="https://wa.me/+50584320840" target="_blank" class="whatsapp-float fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition duration-300" aria-label="WhatsApp">
         <i class="fab fa-whatsapp text-2xl"></i>
     </a>
 
@@ -362,12 +362,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gallery-item productos" data-aos="zoom-in" data-aos-delay="400"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s4.jpg" alt="Diferentes tipos de miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
-                    <div class="gallery-item proceso" data-aos="zoom-in" data-aos-delay="500"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s5.jpg" alt="Extracción de panal" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
+                    <div class="gallery-item productos" data-aos="zoom-in" data-aos-delay="400"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s4.png" alt="Diferentes tipos de miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
+                    <div class="gallery-item proceso" data-aos="zoom-in" data-aos-delay="500"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s5.png" alt="Extracción de panal" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
                     <div class="gallery-item uso" data-aos="zoom-in" data-aos-delay="600"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s1.jpg" alt="Yogurt con miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
                     <div class="gallery-item productos" data-aos="zoom-in" data-aos-delay="700"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s2.jpg" alt="Miel envasada" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
                     <div class="gallery-item proceso" data-aos="zoom-in" data-aos-delay="800"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s3.jpg" alt="Abejas en el panal" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
-                    <div class="gallery-item uso" data-aos="zoom-in" data-aos-delay="900"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s4.jpg" alt="Té con miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
+                    <div class="gallery-item uso" data-aos="zoom-in" data-aos-delay="900"><div class="relative overflow-hidden rounded-xl shadow-lg group"><img src="img/s4.png" alt="Té con miel" class="w-full h-72 object-cover transition duration-500 group-hover:scale-105"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-500"><i class="fas fa-search-plus text-white text-3xl"></i></div></div></div>
                     </div>
             </div>
         </section>
@@ -724,3 +724,4 @@
 </body>
 
 </html>
+
