--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </script>
     <style>
         /* 🎨 3. GUÍA DE ESTILO: Estilos generales y del Header/CTA */
-
+        html, body { max-width: 100% !important; overflow-x: hidden !important; }
         body {
             background-color: #F7FAFC; /* Fondo blanco hueso */
             color: #2D3748; /* Color de texto gris oscuro */
@@ -724,4 +724,5 @@
 </body>
 
 </html>
+
 
